spacing issues

--- a/css/custom.css
+++ b/css/custom.css
@@ -4,7 +4,7 @@ img {
 }
 
 header {
-    position: fixed;
+    position: absolute;
     width: 100%;
     z-index: 999;
 }
@@ -174,6 +174,7 @@ nav.bm-nav {
     text-align: center;
     color: #b4b4b4;
     font-family: 'Montserrat', sans-serif;
+    margin: 150px 0;
 }
 
 #action .title {
@@ -191,7 +192,7 @@ nav.bm-nav {
     font-size: 17px;
     color: rgba(79, 80, 80, 0.5);
     padding-bottom: 30px;
-    width: 35%;
+    width: 40%;
     margin: auto;
 }
 
@@ -208,6 +209,7 @@ footer {
     text-align: center;
     color: #b4b4b4;
     font-family: 'Montserrat', sans-serif;
+    margin: 100px 0 40px;
 }
 
 #masonry .title {
@@ -266,6 +268,10 @@ footer {
     top: 50%;
     left: 50%;
     margin: -43px 0px 0px -43px;
+}
+
+#stories-boxes1 {
+    margin-top: -100px;
 }
 
 #stories-boxes2 {
